buttom navigation and data class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">meteoapp</string>
+    <string name="home_icon">Home</string>
+    <string name="today_icon">Today</string>
+    <string name="tomorrow_icon">Tomorrow</string>
+    <string name="search_icon">Search</string>
+    <string name="home_fragment">HOME!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
