--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,51 @@
     <string name="tomorrow_icon">Tomorrow</string>
     <string name="search_icon">Search</string>
     <string name="home_fragment">HOME!</string>
-</resources>git status
+    <string name="city">Palermo,Sicily</string>
+    <string name="today">Today,</string>
+    <string name="today_date">Sunday 10 september</string>
+    <string name="hour_now">11:00</string>
+    <string name="grade_now">31°</string>
+    <string name="humidity_now">0%</string>
+    <string name="perceived">Perceived</string>
+    <string name="UV">UV Index</string>
+    <string name="humidity">Humidity</string>
+    <string name="wind">Wind</string>
+    <string name="cover">Cover</string>
+    <string name="rain">Rain</string>
+    <string name="grade_perceived">45°</string>
+    <string name="card_UV">5/10</string>
+    <string name="humidity_percentage">60%</string>
+    <string name="wind_speed">SSE 7Km/h</string>
+    <string name="cover_percentage">24%</string>
+    <string name="rain_cm">0cm</string>
+    <string name="hour_for_every_hours">12:00</string>
+    <string name="grade_for_every_hours">29</string>
+    <string name="humidity_for_every_hours">0</string>
+    <string name="sun">sun</string>
+    <string name="drop">drop</string>
+    <string name="hour0">12:00 am</string>
+    <string name="hour1">01:00 am</string>
+    <string name="hour2">02:00 am</string>
+    <string name="hour3">03:00 am</string>
+    <string name="hour4">04:00 am</string>
+    <string name="hour5">05:00 am</string>
+    <string name="hour6">06:00 am</string>
+    <string name="hour7">07:00 am</string>
+    <string name="hour8">08:00 am</string>
+    <string name="hour9">09:00 am</string>
+    <string name="hour10">10:00 am</string>
+    <string name="hour11">11:00 am</string>
+    <string name="hour12">12:00 pm</string>
+    <string name="hour1pm">01:00 pm</string>
+    <string name="hour2pm">02:00 pm</string>
+    <string name="hour3pm">03:00 pm</string>
+    <string name="hour4pm">04:00 pm</string>
+    <string name="hour5pm">05:00 pm</string>
+    <string name="hour6pm">06:00 pm</string>
+    <string name="hour7pm">07:00 pm</string>
+    <string name="hour8pm">08:00 pm</string>
+    <string name="hour9pm">09:00 pm</string>
+    <string name="hour10pm">10:00 pm</string>
+    <string name="hour11pm">11:00 pm</string>
+</resources>
