--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -53,4 +53,6 @@
     <string name="hour9pm">21:00</string>
     <string name="hour10pm">22:00</string>
     <string name="hour11pm">23:00</string>
+    <string name="error_message"> C’è stato un problema con il\n caricamento dei tuoi dati.\n Verifica la tua rete e riprova.</string>
+    <string name="retry">Riprova</string>
 </resources>
