--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,6 @@
     <string name="hour9pm">09:00 pm</string>
     <string name="hour10pm">10:00 pm</string>
     <string name="hour11pm">11:00 pm</string>
-    <string name="error_message"> C’è stato un problema con il\n caricamento dei tuoi dati.\n Verifica la tua rete e riprova.</string>
-    <string name="retry">Riprova</string>
+    <string name="error_message"> There was a problem with uploading your data.n Please check your network and try again.</string>
+    <string name="retry">Retry</string>
 </resources>
