--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,8 +52,8 @@
     <string name="cover_percentage">24%</string>
     <string name="rain_cm">0cm</string>
     <string name="hour_for_every_hours">12:00</string>
-    <string name="grade_for_every_hours">29</string>
-    <string name="humidity_for_every_hours">0</string>
+    <string name="grade_for_every_hours">29°</string>
+    <string name="humidity_for_every_hours">0%</string>
     <string name="sun">sun</string>
     <string name="drop">drop</string>
     <string name="hour0">12:00 am</string>
