HomeScreen correctly showing datas

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -6,7 +6,7 @@
     <string name="sample_weather_icon">weather icon</string>
     <string name="sample_kmh_placeholder">12kmh</string>
     <string name="sample_max_temperature">31°</string>
-    <string name="sample_city_region">Palermo, Sicilia</string>
+    <string name="sample_city_region">Catania, Sicilia</string>
     <!-- home page ui fixed values -->
     <string name="next_5_days">Next 5 days</string>
     <string name="min">min</string>
@@ -28,7 +28,7 @@
     <string name="search_icon">Search</string>
     <string name="home_fragment">HOME!</string>
     <string name="city">Palermo,Sicilia</string>
-    <string name="today">Oggi,</string>
+    <string name="today">Oggi</string>
     <string name="today_date">Domenica 10 settembre</string>
     <string name="hour_now">11:00</string>
     <string name="grade_now">31°</string>
