errors in strings fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="screen_search_rainfall_text">precip</string>
     <string name="city">Palermo,Sicily</string>
     <string name="today">Today</string>
-    <string name="today_date">Sunday 10 september</string>
+    <string name="today_date">Sunday 10 September</string>
     <string name="hour_now">11:00</string>
     <string name="grade_now">31°</string>
     <string name="humidity_now">0%</string>
@@ -56,32 +56,9 @@
     <string name="humidity_for_every_hours">0</string>
     <string name="sun">sun</string>
     <string name="drop">drop</string>
-    <string name="hour0">12:00 am</string>
-    <string name="hour1">01:00 am</string>
-    <string name="hour2">02:00 am</string>
-    <string name="hour3">03:00 am</string>
-    <string name="hour4">04:00 am</string>
-    <string name="hour5">05:00 am</string>
-    <string name="hour6">06:00 am</string>
-    <string name="hour7">07:00 am</string>
-    <string name="hour8">08:00 am</string>
-    <string name="hour9">09:00 am</string>
-    <string name="hour10">10:00 am</string>
-    <string name="hour11">11:00 am</string>
-    <string name="hour12">12:00 pm</string>
-    <string name="hour1pm">01:00 pm</string>
-    <string name="hour2pm">02:00 pm</string>
-    <string name="hour3pm">03:00 pm</string>
-    <string name="hour4pm">04:00 pm</string>
-    <string name="hour5pm">05:00 pm</string>
-    <string name="hour6pm">06:00 pm</string>
-    <string name="hour7pm">07:00 pm</string>
-    <string name="hour8pm">08:00 pm</string>
-    <string name="hour9pm">09:00 pm</string>
-    <string name="hour10pm">10:00 pm</string>
-    <string name="hour11pm">11:00 pm</string>
-    <string name="error_message"> There was a problem with uploading your data.n Please check your network and try again.</string>
+    <string name="error_message"> There was a problem with uploading your data. Please check your network and try again.</string>
     <string name="retry">Retry</string>
+    <string name="clear">Clear</string>
     <string name="error_search_too_short">Insert atleast 4 letters</string>
     <string name="error_search_invalid_city">No valid city found</string>
 </resources>
