--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">meteoapp</string>
+    <!-- home page example data values -->
     <string name="sample_min_temperature">22°</string>
     <string name="sample_date">10/09</string>
     <string name="sample_mm">0mm</string>
@@ -21,7 +23,6 @@
     <string name="friday">Venerdì</string>
     <string name="saturday">Sabato</string>
     <string name="sunday">Domenica</string>
-    <string name="app_name">meteoapp</string>
     <string name="home_icon">Home</string>
     <string name="today_icon">Oggi</string>
     <string name="tomorrow_icon">Domani</string>
@@ -29,7 +30,7 @@
     <string name="home_fragment">HOME!</string>
     <string name="city">Palermo,Sicilia</string>
     <string name="today">Oggi</string>
-    <string name="today_date">Domenica 10 settembre</string>
+    <string name="today_date">Domenica 10 Settembre</string>
     <string name="hour_now">11:00</string>
     <string name="grade_now">31°</string>
     <string name="humidity_now">0%</string>
@@ -50,31 +51,7 @@
     <string name="humidity_for_every_hours">0</string>
     <string name="sun">sole</string>
     <string name="drop">goccia</string>
-    <string name="hour0">00:00</string>
-    <string name="hour1">01:00</string>
-    <string name="hour2">02:00</string>
-    <string name="hour3">03:00</string>
-    <string name="hour4">04:00</string>
-    <string name="hour5">05:00</string>
-    <string name="hour6">06:00</string>
-    <string name="hour7">07:00</string>
-    <string name="hour8">08:00</string>
-    <string name="hour9">09:00</string>
-    <string name="hour10">10:00</string>
-    <string name="hour11">11:00</string>
-    <string name="hour12">12:00</string>
-    <string name="hour1pm">13:00</string>
-    <string name="hour2pm">14:00</string>
-    <string name="hour3pm">15:00</string>
-    <string name="hour4pm">16:00</string>
-    <string name="hour5pm">17:00</string>
-    <string name="hour6pm">18:00</string>
-    <string name="hour7pm">19:00</string>
-    <string name="hour8pm">20:00</string>
-    <string name="hour9pm">21:00</string>
-    <string name="hour10pm">22:00</string>
-    <string name="hour11pm">23:00</string>
-    <string name="error_message"> C’è stato un problema con il\n caricamento dei tuoi dati.\n Verifica la tua rete e riprova.</string>
+    <string name="error_message"> C’è stato un problema con il caricamento dei tuoi dati. Verifica la tua rete e riprova.</string>
     <string name="retry">Riprova</string>
     <string name="recent_researches">Recent researches</string>
     <string name="search_a_city">Search a city</string>
@@ -82,5 +59,6 @@
     <string name="example_search_screen_city">Palermo</string>
     <string name="screen_search_rainfall_text">precip</string>
     <string name="error_search_too_short">Inserire almeno 4 lettere</string>
+    <string name="clear">Sereno</string>
     <string name="error_search_invalid_city">Nessuna città trovata con questo nome</string>
 </resources>
