--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="grade_perceived">45°</string>
     <string name="card_UV">5/10</string>
     <string name="humidity_percentage">60%</string>
-    <string name="wind_speed">SSE 7Km/h</string>
+    <string name="wind_speed">7Km/h</string>
     <string name="cover_percentage">24%</string>
     <string name="rain_cm">0cm</string>
     <string name="hour_for_every_hours">12:00</string>
@@ -61,4 +61,16 @@
     <string name="clear">Clear</string>
     <string name="error_search_too_short">Insert atleast 4 letters</string>
     <string name="error_search_invalid_city">No valid city found</string>
+
+<!--    wind direction-->
+    <string name="NNE">NNE</string>
+    <string name="ENE">ENE</string>
+    <string name="ESE">ESE</string>
+    <string name="SSE">SSE</string>
+    <string name="SSW">SSW</string>
+    <string name="WSW">WSW</string>
+    <string name="WNW">WNW</string>
+    <string name="NNW">NNW</string>
+
+
 </resources>
