--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="rain">Rain</string>
     <string name="sun">sun</string>
     <string name="drop">drop</string>
-    <string name="error_message"> There was a problem with uploading your data. Please check your network and try again.</string>
+    <string name="error_message"> There was a problem with retrieving data. Please check your network and try again.</string>
     <string name="retry">Retry</string>
     <string name="error_search_too_short">Insert atleast 4 letters</string>
     <string name="error_search_invalid_city">No valid city found</string>
