Added GeoLocalizationHelper.kt and added the behaviour that when the app is opened for the first time and the position is not active, it will redirect you to the search screen and force you to search a city before continuing. Added the behaviour that when you click on a search item it navigates you to the home screen

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -78,5 +78,6 @@
     <string name="thunderstorm_with_slight_hail">temporale con leggera grandine</string>
     <string name="thunderstorm_with_heavy_hail">temporale con forte grandine</string>
     <string name="error">error</string>
+    <string name="request_turn_on_position">Per favora attiva la posizione</string>
 
 </resources>
