--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">meteoapp</string>
 
     <!-- home page ui fixed values -->
-    <string name="next_5_days">Next 5 days</string>
+    <string name="next_5_days">NEXT 5 DAYS</string>
     <string name="min">min</string>
     <string name="max">max</string>
     <string name="rainfall">precip.</string>
