--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">meteoapp</string>
 
     <!-- home page ui fixed values -->
-    <string name="next_5_days">NEXT 5 DAYS</string>
+    <string name="next_5_days">next 5 days</string>
     <string name="min">min</string>
     <string name="max">max</string>
     <string name="rainfall">precip.</string>
@@ -28,14 +28,15 @@
     <string name="perceived">Perceived</string>
     <string name="UV">UV Index</string>
     <string name="humidity">Humidity</string>
-    <string name="wind">wind</string>
+    <string name="wind_m">wind</string>
+    <string name="wind">Wind</string>
     <string name="cover">Cover</string>
     <string name="rain">Rain</string>
     <string name="sun">sun</string>
     <string name="drop">drop</string>
     <string name="error_message"> There was a problem with retrieving data. Please check your network and try again.</string>
     <string name="retry">Retry</string>
-    <string name="error_search_too_short">Insert atleast 4 letters</string>
+    <string name="error_search_too_short">Insert at least 4 letters</string>
     <string name="error_search_invalid_city">No valid city found</string>
 
 <!--    wind direction-->
